Fix saving keepalive interval for WireGuard

NetworkManager expects the persistent-keepalive value to be an uint
and just ignores it if it is not.

BUG: 461319